[project]
name = "sourcesage"
version = "0.1.0"
description = "An MCP server for efficient code memory management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.5.0",
    "requests>=2.32.3",
]

[project.scripts]
sourcesage = "sourcesage.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sourcesage"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W", "N", "B", "UP", "C", "T", "Q"]
ignore = []

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
